--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
                             @if (@HttpContextAccessor.HttpContext.User.FindFirst(ClaimTypes.NameIdentifier) != null)
                             {
                             <li class="nav-item">
-                                <a class="nav-link" href="@Url.Action("InDevelopment", "Home")">Профиль</a>
+                                <a class="nav-link" href="@Url.Action("Profile", "Users")">Профиль</a>
                             </li>
                             } 
                             else 
