--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -61,11 +61,17 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="@Url.Action("InDevelopment", "Home")">Contact</a>
                             </li>
-                            @if (@HttpContextAccessor.HttpContext.User.FindFirst(ClaimTypes.NameIdentifier) != null)
+                            @if (@HttpContextAccessor.HttpContext?.User.FindFirst(ClaimTypes.NameIdentifier) != null)
                             {
                             <li class="nav-item">
                                 <a class="nav-link" href="@Url.Action("Profile", "Users")">Профиль</a>
                             </li>
+                                @if (@HttpContextAccessor.HttpContext?.User.IsInRole("True") ?? false)
+                                {
+                                <li class="nav-item">
+                                    <a class="nav-link" href="@Url.Action("Profile", "Users")">AdminPanel</a>
+                                </li>
+                                }
                             } 
                             else 
                             {
