--- a/Views/Topics/Detail.cshtml
+++ b/Views/Topics/Detail.cshtml
@@ -146,27 +146,71 @@
                     </div>
                 </div>
             </section>
+<script type="text/javascript">
+    // эта ссамая полезная функция
+    function createElementFromHTML(htmlString) {
+        var div = document.createElement('div');
+        div.innerHTML = htmlString.trim();
+        // Change this to div.childNodes to support multiple top-level nodes.
+        return div.firstChild;
+    }
 
+    // отправление запроса на добавление коментария
+    function addComment() {
+        var xhr = new XMLHttpRequest();
+        xhr.open('POST', 'comment.php');
+        var animeId = encodeURIComponent(document.getElementById("animeId").value);
+        var text = encodeURIComponent(document.getElementById("text").value);
+        xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+        xhr.send('animeId='+animeId+'&text='+text);
+        xhr.onreadystatechange = handleFunc;
 
-            @*TODO: comments*@
+        function handleFunc() {
+            if(xhr.readyState === 4 && xhr.status === 200) {
+	            var ul = document.getElementById("list");
+	            ul.appendChild(createElementFromHTML(xhr.responseText));
+	            document.getElementById("text").value = '';
+	            var li = document.getElementById("nocomments");
+	            if (typeof(li) != 'undefined' && li != null)
+	            {
+		            li.parentNode.removeChild(li);
+	            }
+            } else {
+	            alert(xhr.responseText);
+            }
+        };
+    }
+</script>
 
 
             <section class="section-padding section-bg">
                 <div class="container">
                     <div class="row justify-content-center">
 
-                        <div class="col-lg-5 col-12">
+                        @*<div class="col-lg-5 col-12">
                             <img src="~/images/rear-view-young-college-student.jpg" class="newsletter-image img-fluid" alt="">
-                        </div>
+                        </div>*@
 
-                        <div class="col-lg-5 col-12 subscribe-form-wrap d-flex justify-content-center align-items-center">
-                            <form class="custom-form subscribe-form" action="#" method="post" role="form">
-                                <h4 class="mb-4 pb-2">Get Newsletter</h4>
+                        <div class="col-lg-6 col-12">
+                            <form action="#" method="post" class="custom-form contact-form" role="form">
+                                <div class="row">
+                                    
+                                    <div class="col-lg-12 col-12 m-auto">
+                                        <h4 class="mb-4">Напишите комментарий к алгоритму</h4>
+                                    </div>
 
-                                <input type="email" name="subscribe-email" id="subscribe-email" pattern="[^ @@]*@@[^ @@]*" class="form-control" placeholder="Email Address" required="">
+                                    <div class="col-lg-12 col-12">
+                                        <div class="form-floating">
+                                            <textarea class="form-control" id="message" name="message" placeholder="Текст комментария"></textarea>
+                                            
+                                            <label for="floatingTextarea">Текст комментария</label>
+                                        </div>
+                                    </div>
 
-                                <div class="col-lg-12 col-12">
-                                    <button type="submit" class="form-control">Subscribe</button>
+                                    <div class="col-lg-4 col-12 ms-auto">
+                                        <button onclick="addComment()" class="form-control">Отправить</button>
+                                    </div>
+
                                 </div>
                             </form>
                         </div>
@@ -174,3 +218,6 @@
                     </div>
                 </div>
             </section>
+
+
+            @*TODO: comments*@
