--- a/wwwroot/css/templatemo-topic-listing.css
+++ b/wwwroot/css/templatemo-topic-listing.css
@@ -152,6 +152,10 @@ strong {
   padding-bottom: 100px;
 }
 
+.section-padding-top {
+    padding-top: 100px;
+}
+
 .section-bg {
   background-color: var(--section-bg-color);
 }
@@ -1096,7 +1100,11 @@ blockquote {
     padding-top: 50px;
     padding-bottom: 50px;
   }
-  
+
+  .section-padding-top {
+        padding-top: 50px;
+  }
+
   .navbar {
     background-color: var(--secondary-color);
   }
