--- a/Views/Contents/GetTopicContents.cshtml
+++ b/Views/Contents/GetTopicContents.cshtml
@@ -3,7 +3,40 @@
     Layout = "/Views/Shared/Admin.cshtml";
 }
 @model (List<ContentType>, List<Content>)
+@*@model (List<ContentType>, List<Content>, List<ProgramingLanguage>)*@
 
+<script>
+    function editContent(id) {
+        var xhr = new XMLHttpRequest();
+        xhr.open('POST', '@Url.Action("Edit", "Contents")');
+
+        var contentId = encodeURIComponent(id);
+        var ContentTypeId = encodeURIComponent(document.getElementById("ContentTypeId"+id).value);
+        var Data = encodeURIComponent(document.getElementById("Data"+id).value);
+        var Order = encodeURIComponent(document.getElementById("Order"+id).value);
+        var CodeListId = encodeURIComponent(document.getElementById("CodeListId"+id).value);/////////
+        
+        xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+        xhr.send('Id='+contentId + '&ContentTypeId='+ContentTypeId + '&Data='+Data 
+            + '&Order='+Order + '&CodeListId='+CodeListId);
+        xhr.onreadystatechange = handleFunc;
+
+        function handleFunc() {
+            if(xhr.readyState === 4) {
+                if (xhr.status === 200) {
+	                @*var container = document.getElementById("MainContainer");
+	                var contentContainer = document.getElementById("container"+id);
+
+                    var res = container.innerHTML + xhr.responseText;
+                    container.innerHTML = res;*@
+                    alert("Сохранено");
+                } else {
+                    alert("Ошибка");
+                }
+            }
+        };
+    }
+</script>
 
     
 <div class="templatemo-content-wrapper">
@@ -17,12 +50,13 @@
             </div>
             <h4 class="margin-bottom-15">Все алгоритмы</h4>
             
-
+            <div id="MainContainer">
             @foreach (var content in @Model.Item2)
             {
-                <div class="row">
+                string iid = content.Id.ToString();
+                <div class="row" id="@("container"+iid)">
                     <div class="margin-bottom-15">
-                        <select name="ContentTypeName" class="form-control">
+                        <select id="@("ContentTypeId"+iid)" name="ContentTypeId" class="form-control">
                             @foreach (var contentType in @Model.Item1)
                             {
                                 <option value="@contentType.Id" @(contentType.Id == content.ContentTypeId ? "selected" : "")>@contentType.Name</option>
@@ -30,11 +64,15 @@
                         </select>
                         @if(content.ContentTypeName == "Text" || content.ContentTypeName == "MarkedText" || content.ContentTypeName == "Warning")
                         {
-                            <textarea class="form-control" rows="4">@content.Data</textarea>
+                            <textarea id="@("Data"+iid)" style="resize: vertical;" class="form-control" rows="4">@content.Data</textarea>
+                        }
+                        else if(content.ContentTypeName == "Code")
+                        {
+                            <input type="number" id="@("CodeListId"+iid)" name="CodeListId" class="form-control" value="@content.CodeListId">
                         }
                         else
                         {
-                            <input type="text" class="form-control" value="@content.Data">
+                            <input type="text" id="@("Data"+iid)" name="Data" class="form-control" value="@content.Data">
                         }
                     </div>
                     
@@ -42,45 +80,15 @@
                         <label>Порядок:</label>
 	                </div>
                     <div class="col-md-5 margin-bottom-15">
-                        <input type="number" class="form-control" value="@content.Order">
+                        <input id="@("Order"+iid)" type="number" class="form-control" value="@content.Order">
 	                </div>
                     <div class="col-md-6 margin-bottom-15" style="text-align: end">
-	                    <button class="btn btn-primary">Сохранить</button>
+	                    <button onclick="editContent('@iid');" class="btn btn-primary">Сохранить</button>
 	                </div>
                 </div>
             }
+            </div>
 
-@*            <table class="table table-striped table-hover table-bordered">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Текст</th>
-                        <th>Тип контента</th>
-                        <th>Порядок</th>
-                    </tr>
-                </thead>
-                <tbody>
-
-                    @foreach (var content in @Model.Item2)
-                    {
-                        <tr>
-                            <td>@content.Id</td>
-                            <td contenteditable="true" class="editable">@content.Data</td>
-                            <td>
-                                 <select name="ContentTypeName" class="form-control">
-                                     @foreach (var contentType in @Model.Item1)
-                                    {
-                                         <option value="@contentType.Id" @(contentType.Name == content.ContentTypeName ? "selected" : "")>@contentType.Name</option>
-                                    }
-                                   </select>
-                            </td>
-                            <td contenteditable="true" class="editable">@content.Order</td>
-                            <td><a href="@Url.Action("EditTopic", "Topics", new { Id = content.Id})" class="btn btn-default">Внести изменения</a></td>
-                            <td><a href="javascript:;" onclick="userId = @content.Id" data-toggle="modal" data-target="#userDeleteModal" class="btn btn-link">Удалить</a></td>
-                        </tr>
-                    }
-                </tbody>
-            </table>*@
         </div>
 
 
@@ -89,3 +97,17 @@
 </div>
 
 
+                    
+
+@*var commentHeader = document.getElementById("commentHeader");
+var div = document.getElementById("nocomments");
+
+if (typeof(div) != 'undefined' && div != null)
+{
+	div.parentNode.removeChild(div);
+}
+if (typeof(commentHeader) != 'undefined' && commentHeader != null)
+{
+	commentHeader.parentNode.removeChild(commentHeader);
+}
+var header = '<div id="commentHeader" class="col-lg-8 col-12 m-auto"><h3 class="mb-4">Шарҳҳои алгоритм</h3><br/></div>'*@
